# OpenChargeback

./: .gitignore  .woodpecker.yml  README.md  azure-pipelines.yml  compose.yml  config.example.yaml  pyproject.toml  renovate.json  sbom.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: EXECSUMMARY.md  OPERATIONS.md  README.md  TECHNOLOGY.md  qumulo-storage-export-guide.md  upgrade.md
docs/admin-guide/: README.md  billing-workflow.md  journal-export.md  review-process.md  templates.md
docs/deployment/: azure-devops.md
docs/development/: README.md  architecture.md  contributing.md  mkdocs-plan.md
docs/discussions/: licensing-and-commercialization.md  next-todo.md
docs/getting-started/: README.md  configuration.md  installation.md
docs/implementation/: README.md  TEMPLATE.md  azure-local-vm-export-guide.md  hpc-slurm-isilon-export-guide.md  qumulo-storage-export-guide.md
docs/integrations/: README.md  TAG-SPECIFICATION.md  TEMPLATE.md
docs/integrations/azure-local/: azure-local-vm-export-guide.md
docs/integrations/azure-local/Logs/: sample-audit.json
docs/integrations/isilon/config/: projects.json
docs/integrations/openai-tokens/: OpenAI ChatGPT Edu billing format.csv  README.md  SUBSIDY-OPTIONS.md  convert-openai-usage-to-focus-v2.py  convert-openai-usage-to-focus.py  pricing.json  projects.json  subsidies.json
docs/integrations/qumulo/: Export-QumuloBilling.ps1  qumulo-storage-export-guide.md
docs/integrations/qumulo/Logs/: sample-audit.json
docs/integrations/qumulo/config/: rates.example.json  rates.json  template.openchargeback.json
docs/integrations/slurm/: hpc-slurm-isilon-export-guide.md
docs/integrations/slurm/config/: accounts.example.json
docs/mockup/: index.html
docs/operations/: README.md  database.md  docker.md  logging.md  troubleshooting.md
docs/reviews/: codex54-openchargeback-review.txt
docs/security/: README.md  audit-trail.md  authentication.md  data-protection.md  supply-chain.md
docs/upgrades/: README.md  dependencies.md  versioning.md
docs/user-guide/: README.md  cli.md  focus-format.md  web-ui.md
sample_data/: README.md  aws_2025-12.csv  azure_2025-01.csv  hpc_2025-01.csv  hpc_2025-12.csv  it_storage_2025-01.csv  it_storage_2025-12.csv  storage_2025-01.csv  storage_2025-12.csv
sample_data/inputs/: aws_2025-01.csv  aws_2025-12.csv  azure_2025-01.csv  azure_2025-12.csv  hpc_2025-01.csv  hpc_2025-12.csv  it_storage_2025-01.csv  it_storage_2025-12.csv  openai-tokens_2026-01.csv  storage_2025-01.csv  storage_2025-12.csv
sample_data/outputs/emails/: 20260130_214047_chen_wei_at_example_edu.html  20260130_214048_patel_ravi_at_example_edu.html  20260130_214048_yamamoto_kenji_at_example_edu.html  20260130_214049_nguyen_linh_at_example_edu.html  20260130_214050_martinez_sofia_at_example_edu.html  20260130_214050_okonkwo_adaeze_at_example_edu.html  20260130_214051_anderson_emily_at_example_edu.html  20260130_233505_zorp_blinkman_at_example_edu.html  20260130_233506_drix_kelvington_at_example_edu.html  20260130_233506_grix_mottershaw_at_example_edu.html  20260130_233506_plex_wombsworth_at_example_edu.html  20260130_233507_quib_flannister_at_example_edu.html  20260130_233507_tarn_voxley_at_example_edu.html  20260130_233508_frin_bumberly_at_example_edu.html
sample_data/outputs/journals/: journal_2025-01_20260130_212445.csv  journal_2025-01_20260130_233508.csv
scripts/: generate-sample-outputs.sh  service.sh
src/focus_billing/: __init__.py  audit.py  cli.py  config.py
src/focus_billing/db/: engine.py  repository.py  schema.py  tables.py
src/focus_billing/delivery/: __init__.py  email.py
src/focus_billing/ingest/: __init__.py  base.py  focus.py
src/focus_billing/output/: __init__.py  journal.py
src/focus_billing/processing/: __init__.py  aggregator.py
src/focus_billing/web/: __init__.py  app.py  auth.py  deps.py
src/openchargeback/: __init__.py  audit.py  cli.py  logging.py
src/openchargeback/db/: __init__.py  engine.py  repository.py  tables.py
src/openchargeback/delivery/: email.py  smtp.py
src/openchargeback/ingest/: focus.py
src/openchargeback/models/: __init__.py
src/openchargeback/output/: email.py  journal.py  journal_template.py  pdf.py
src/openchargeback/processing/: aggregator.py
src/openchargeback/web/: __init__.py  app.py  auth.py  deps.py  schemas.py
templates/: email_summary.html  journal_gl.csv  statement.html
tests/: __init__.py  conftest.py  test_aggregator.py  test_config.py  test_ingest.py  test_journal_template.py  test_logging.py  test_output.py  test_period_service.py  test_repository.py
tests/fixtures/: sample-focus.csv
(+89 files in other folders)
