[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focus-billing"
version = "0.1.0"
description = "FOCUS-format billing data processor for research computing chargebacks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Northwinds University IT" }
]
keywords = ["billing", "finops", "focus", "chargeback", "research-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",  # For nice CLI output with Typer
    "sqlalchemy>=2.0.0",  # Database abstraction for SQLite/PostgreSQL
    # Web interface
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",  # For file uploads
    "bcrypt>=4.0.0",  # Password hashing
    "itsdangerous>=2.1.0",  # Session signing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
focus-billing = "focus_billing.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/focus_billing"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["focus_billing"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
